name:                optparse-monoidal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmoverton/optparse-monoidal#readme
license:             BSD3
license-file:        LICENSE
author:              David Overton
maintainer:          doverton@seek.com.au
copyright:           2017 David Overton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmoverton/optparse-monoidal
